--- a/styles.css
+++ b/styles.css
@@ -285,12 +285,18 @@
         color: var(--text-color);
     }
 
+    .tarjetas{
+        background-color: var(--secondary-color-light);
+        margin-bottom: 2rem;
+        padding: 1.6rem;
+    }
+
     /*Bienvenido*/
     .hero{
         display: flex;
         justify-content: center;
         flex-direction: column;
-        margin:1rem 8.6rem;
+        margin:1rem 9rem;
         padding: 2rem 0;
     }
 
@@ -299,14 +305,8 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        padding: 3.6rem 8.6rem;
+        padding: 3.6rem 9rem;
         background-color: var(--light-color);
-    }
-
-    .tarjetacosplays{
-        background-color: var(--secondary-color-light);
-        margin-bottom: 2rem;
-        padding: 1.6rem;
     }
 
     .images_cosplays{
@@ -319,17 +319,6 @@
     .images_cosplays img{
         width: 16rem;
         box-shadow: 0px 0px 5px #33255a;    
-        
-    }
-
-    .tarjetacosplays img::after{
-        content: '';
-        background: inherit;
-        position: absolute;
-        filter: blur(25px) saturate(1.5);
-        width: 16rem;
-        scale: 1.05;
-        z-index: 1;
     }
 
 
@@ -338,7 +327,18 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        padding: 3.6rem 8.6rem;
+        padding: 3.6rem 9rem;
+    }
+    .images_pelucas{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        margin-top: 2rem;
+    }
+    .images_pelucas img{
+        width: 16rem;
+        box-shadow: 0px 0px 5px #33255a;    
     }
 
     /*Articulos*/
@@ -346,7 +346,7 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        padding: 3.6rem 8.6rem;
+        padding: 3.6rem 9rem;
         background-color: var(--light-color);
     }
 
@@ -355,7 +355,7 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        padding: 3.6rem 8.6rem;
+        padding: 3.6rem 9rem;
     }
 
     /*Servicios Personalizados*/
@@ -363,7 +363,7 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        padding: 3.6rem 8.6rem; 
+        padding: 3.6rem 9rem; 
         background-color: var(--light-color);
     }
 
