--- a/styles.css
+++ b/styles.css
@@ -293,6 +293,7 @@
         color: var(--light-color);
     }
 
+ 
 
 
 
@@ -305,6 +306,8 @@
     .nombre {
         margin-bottom: 3.29rem;
     }
+
+
 
     /*Bienvenido*/
     .hero{
@@ -400,6 +403,7 @@
     }
     .images_talleres img{
         width: 13.6rem;
+        height: 16rem;
         box-shadow: 0px 0px 5px #33255a;    
     }
 
@@ -410,6 +414,9 @@
         flex-direction: column;
         padding: 3.6rem 3.2rem; 
         background-color: var(--light-color);
+    }
+    .servicios_personalizados a:hover {
+        color: var(--background-color);
     }
 
     /*Footer*/
