--- a/styles.css
+++ b/styles.css
@@ -467,12 +467,10 @@
         justify-content: space-around;
         align-items: center;
         gap:3.3rem;
-        padding: 1rem 0;
+        padding: 1rem 0 2rem 0;
         background-color: var(--primary-color);
         color: var(--text-color);
     }
-            
-
     footer img{
         width: 8.6rem;
         margin-right: 0;
@@ -480,7 +478,17 @@
         border-radius: 0.95rem;
         transition: all 0.3s ease;
     }
-    footer img:hover{
+    .footer_left{
+        margin-top: 1.5rem;
+        margin-bottom: 1.8rem;
+    }
+
+    .footer_left img{
+        margin-left: -0.3rem;
+        margin-bottom: -0.6rem;
+    }
+
+    .redes-sociales img:hover{
         background-color: var(--light-color);
         scale: 1.1;
     }
@@ -499,20 +507,38 @@
         margin-right: 1.6rem;
     }
 
-    .nosotros_footer{
-        padding-bottom: 2.6rem;
-        border-bottom: solid 2px var(--text-color);
+
+    .footer_mid h2{
+        margin-top: 2rem;
+        margin-bottom:3rem;
     }
-    .legal{
-        padding-top: 2.6rem;
+    .footer_mid p{
+        margin:0.1;
     }
 
+
+    .footer_right{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        max-width: 60%;
+    }
+    .nosotros_footer{
+        margin-left: 2rem;
+        margin-right: 0.6rem;
+    }
+
+    .footer_right h3{
+        margin-bottom: 3.6rem;
+        font-size: 2rem;
+
+    }    
     .footer_right a{
         display: flex;
         margin-bottom: -0.5rem;
         max-width: 100%;
     }
-
     footer  a   {
         color: var(--text-color);
         font-size: 1.2rem;
